added git attributes and readme

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+~mp4 filter=lfs diff=lfs merge=lfs -text
+
+
+
 # Unity - Large binary assets
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
@@ -14,3 +18,4 @@
 
 # Video files
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+
